-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.10, 5.15.16, 6.8
-
-
3d99f90b5 (dev), 8d2f2cc79 (6.8), 6b4fa588a (6.7), 9909bd24c (tqtc/lts-6.5), 67badbd56 (tqtc/lts-6.2), 57606c086 (tqtc/lts-6.2), 6ab3742ec (6.7)
Hovering over an expanded tool bar’s items when these items are overlapping a QDockWidget sometimes causes the expanded tool bar to lose focus. Attached is the example and screen recording.
Please note that this issue is usually easily reproducible but may not happen every time.
Follow these steps to reproduce:
1.) Build and run the supplied program.
2.) Click the double arrow (“>>”) at the top right of the window to expand the tool bar.
3.) While still hovering over the expanded tool bar, move the mouse downwards to be horizontally aligned with ‘button_3’ and ‘button_4’.
4.) While still hovering over the expanded tool bar, move the mouse to the left so that it is now hovering over ‘button_3’.
5.) Notice that during the last step, focus on the expanded tool bar has been incorrectly lost.
Reproduced on M2 machine with OSX13
For Gerrit Dashboard: QTBUG-124733 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
584340,4 | Avoid dock widget separators stealing mouse events from expanded toolbar | dev | qt/qtbase | Status: MERGED | +2 | 0 |
585374,2 | Avoid dock widget separators stealing mouse events from expanded toolbar | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
585694,2 | Avoid dock widget separators stealing mouse events from expanded toolbar | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
585778,2 | Avoid dock widget separators stealing mouse events from expanded toolbar | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
585953,4 | Avoid dock widget separators stealing mouse events from expanded toolbar | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |